--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 ﻿{
 	"id": "com.vortexapplabs.zapracer",
-	"version": "1.1",
+	"version": "1.2",
 	"name": "Zap racer",
 	"description": "Fastest city streets are waiting for you!",
 	"author": "Vortex App Labs",
@@ -22,6 +22,7 @@
 	}],
 	"plugins": [
 		{ "id": "cordova-custom-config", "version": null },
+		{ "id": "cordova-plugin-ad-admob", "version": null },
 		{ "id": "cordova-plugin-file", "version": null },
 		{ "id": "cordova-plugin-inappbrowser", "version": null },
 		{ "id": "cordova-plugin-media", "version": null },
